Added base plugin to clean up

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
+plugins {
+    id 'base'
+}
+
 tasks.register('generateDescriptions', Copy) {
     from 'descriptions'
     into "$buildDir/descriptions"
