Added the customer tasks to a group

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 tasks.register('generateDescriptions', Copy) {
-//    group 'Theme Park'
-//    description 'Generates descriptions including token substitutes'
+    group 'Theme Park'
+    description 'Generates descriptions including token substitutes'
     from 'descriptions'
     into "$buildDir/descriptions"
     filter (ReplaceTokens, tokens: [THEME_PARK_NAME: "Grelephant's Wonder World"])
